added section plan

--- a/index.html
+++ b/index.html
@@ -35,9 +35,37 @@
                     </div>
                 </div> 
             </div>
-
         </div>
     </header>
+    <main>
+        <section class="plan countainer-small">
+            <h2>Trova il piano buisness che fa per te</h2>
+            <span></span>
+            <div class="row">
+                <div class="col">
+                    <div class="card-small">
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card-small">
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card-small">
+
+                    </div>
+                </div>
+                <div class="col-large">
+                    <div class="card-large">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+    </main>
     
 </body> 
 </html>
