--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -35,13 +36,22 @@
         </nav>
         <div class="jumbotron">
             <div class="countainer-large">
-                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <b><h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1></b>
                 <div class="box">   
                     <div class="box-small">
-
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e<br> colaboratori sono acessibili dallo stesso posto.<br> Dropbox Buisness è più di uno spazio di<br> archiviazione sicuro: è un modo intelligente e<br> integrato per ottimizzare il flusso del lavoro<br> esistente.</p>
+                        <div>
+                            <button class="bottone">Inizia la tua prova gratuita</button>
+                        </div>
+                        <div>
+                            <span>Annulla in qualsiasi momento</span>
+                        </div>
+                        <div class="arrow">
+                            <span><b><i class="fa-solid fa-arrow-down"></i></b></span>
+                        </div>
                     </div>
                     <div class="box-large">
-
+                       
                     </div>
                 </div> 
             </div>
