added left jumbotron

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="box-large">
-                       
+                       <img  class="jumbo-img" src="img/jumbo.png" alt="asdsa">
                     </div>
                 </div> 
             </div>
