fill plan section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <span>Annulla in qualsiasi momento</span>
                         </div>
                         <div class="arrow">
-                            <span><b><i class="fa-solid fa-arrow-down"></i></b></span>
+                            <span ><b><i class="fa-solid fa-arrow-down"></i></b></span>
                         </div>
                     </div>
                     <div class="box-large">
@@ -59,21 +59,89 @@
     </header>
     <main>
         <section class="plan countainer-small">
-            <h2>Trova il piano buisness che fa per te</h2>
-            <span></span>
+            <h2>Trova il piano business che fa per te</h2>
+            <div class="cont-spunta">
+                <div class="spunta">
+                    <div class="cerchietto-spuntato"></div><span>Fatturazione mensile</span>
+                </div>
+                <div class="spunta">
+                    <div class="cerchietto"></div><span>Fatturazione mensile</span>
+                </div>
+            </div>
+           
             <div class="row">
                 <div class="col">
                     <div class="card-small">
+                        <div class="card-typology">
+                            <span><i class="fa-solid fa-user"></i></span><span class="space">Singolo</span>
+                        </div>
+                        <ul>
+                            <li><a href="#">Profesional</a></li>
+                            <li><a href="#">&euro;12</a></li>
+                            <li><a href="#">/mese</a></li>
+                            <li><a href="#"><i class="fa-solid fa-user"></i>1 utente</a></li>
+                            <li><a href="#"><i class="fa-solid fa-folder"></i><p>5 TB di spazio di archiviazione<br> sicuro</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p>Funzioni di produttività premium<br>e condivisione file semplice e<br>sicura</p> </a></li>
+                        </ul>
+                        <button class="bottone">Prova gratis per 30 giorni</button>
+                        <div>
+                            opure<a>acquista ora </a>
+                        </div>
+                        <ul>
+                            <li><a>Punti Salienti del piano</a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Cartelle offline su dispositivi<br>mobili</p></a></li>
+                        </ul>
 
                     </div>
                 </div>
                 <div class="col">
                     <div class="card-small">
+                        <div class="card-typology">
+                            <span><i class="fa-solid fa-users"></i><span class="space">Team</span>
+                        </div>
+                        <ul>
+                            <li><a href="#">Advance</a></li>
+                            <li><a href="#">&euro;18</a></li>
+                            <li><a href="#">/utente/mese</a></li>
+                            <li><a href="#"><i class="fa-solid fa-user"></i>3 o più utenti</a></li>
+                            <li><a href="#"><i class="fa-solid fa-folder"></i><p>Tutto lo spazio di cui ha bisogno il tuo<br>team</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p>Sofisticate funzioni di controllo e<br>per tenere al sicuro tutti i file del<br>tuo team</p> </a></li>
+                        </ul>
+                        <button class="bottone">Prova gratis per 30 giorni</button>
+                        <div>
+                            opure<a>acquista ora </a>
+                        </div>
+                        <ul>      <!--continuare a riempire qui-->
+                            <li><a>Punti Salienti del piano</a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Cartelle offline su dispositivi<br>mobili</p></a></li>
+                        </ul>
 
                     </div>
                 </div>
                 <div class="col">
                     <div class="card-small">
+                        <div class="card-typology">
+                            <span><i class="fa-solid fa-building"></i><span class="space">Azienda</span>
+                        </div>
+                        <ul>
+                            <li><a href="#">Profesional</a></li>
+                            <li><a href="#">&euro;12</a></li>
+                            <li><a href="#">/mese</a></li>
+                            <li><a href="#"><i class="fa-solid fa-user"></i>1 utente</a></li>
+                            <li><a href="#"><i class="fa-solid fa-folder"></i><p>5 TB di spazio di archiviazione<br> sicuro</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p>Funzioni di produttività premium<br>e condivisione file semplice e<br>sicura</p> </a></li>
+                        </ul>
+                        <button class="bottone">Prova gratis per 30 giorni</button>
+                        <div>
+                            opure<a>acquista ora </a>
+                        </div>
+                        <ul>
+                            <li><a>Punti Salienti del piano</a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Cartelle offline su dispositivi<br>mobili</p></a></li>
+                        </ul>
 
                     </div>
                 </div>
