--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <div class="jumbotron">
             <div class="countainer-large">
-                <b><h1 class="mb-20">Tutto ciò che ti serve per il lavoro, in un unico posto</h1></b>
+                <h1 class="mb-20">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box">   
                     <div class="box-small">
                         <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e<br> colaboratori sono acessibili dallo stesso posto.<br> Dropbox Buisness è più di uno spazio di<br> archiviazione sicuro: è un modo intelligente e<br> integrato per ottimizzare il flusso del lavoro<br> esistente.</p>
@@ -67,24 +67,24 @@
                 <div class="col">
                     <div class="card-small">
                         <div class="card-typology">
-                            <span><i class="fa-solid fa-user"></i></span><span class="space">Singolo</span>
+                            <span><i class="fa-solid fa-user"></i></span><span class="pl-5">Singolo</span>
                         </div>
                         <ul>
-                            <li><a href="#">Profesional</a></li>
-                            <li><a href="#">&euro;12</a></li>
-                            <li><a href="#">/mese</a></li>
-                            <li><a href="#"><i class="fa-solid fa-user"></i>1 utente</a></li>
-                            <li><a href="#"><i class="fa-solid fa-folder"></i><p>5 TB di spazio di archiviazione<br> sicuro</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p>Funzioni di produttività premium<br>e condivisione file semplice e<br>sicura</p> </a></li>
+                            <li><a href="#"><h3>Profesional</h3></a></li>
+                            <li><a href="#"><p class="ml-20"><b>&euro;12</b></p></a></li>
+                            <li><a href="#"><p class="ml-20">/mese</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">1 utente</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">5 TB di spazio di archiviazione<br> sicuro</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Funzioni di produttività premium<br>e condivisione file semplice e<br>sicura</p> </a></li>
                         </ul>
-                        <button class="bottone">Prova gratis per 30 giorni</button>
+                        <a class="btn">Prova gratis per 30 giorni</a>
                         <div>
-                            opure<a>acquista ora </a>
+                            <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
                         </div>
                         <ul>
-                            <li><a>Punti Salienti del piano</a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Cartelle offline su dispositivi<br>mobili</p></a></li>
+                            <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
                         </ul>
 
                     </div>
@@ -92,27 +92,27 @@
                 <div class="col">
                     <div class="card-small">
                         <div class="card-typology">
-                            <span><i class="fa-solid fa-users"></i><span class="space">Team</span>
+                            <span><i class="fa-solid fa-users"></i></span><span class="pl-5">Team</span>
                         </div>
                         <ul>
-                            <li><a href="#">Advance</a></li>
-                            <li><a href="#">&euro;18</a></li>
-                            <li><a href="#">/utente/mese</a></li>
-                            <li><a href="#"><i class="fa-solid fa-user"></i>3 o più utenti</a></li>
-                            <li><a href="#"><i class="fa-solid fa-folder"></i><p>Tutto lo spazio di cui ha bisogno il tuo<br>team</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p>Sofisticate funzioni di controllo e<br>per tenere al sicuro tutti i file del<br>tuo team</p> </a></li>
+                            <li><a href="#"><h3><b>Advance</b></h3></a></li>
+                            <li><a href="#"><p class="ml-20"><b>&euro;18</b></p></a></li>
+                            <li><a href="#"><p class="ml-20">/utente/mese</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">3 o più utenti</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">Tutto lo spazio di cui ha bisogno il tuo<br>team</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Sofisticate funzioni di controllo e<br>per tenere al sicuro tutti i file del<br>tuo team</p> </a></li>
                         </ul>
-                        <button class="bottone">Prova gratis per 30 giorni</button>
+                        <a class="btn">Prova gratis per 30 giorni</a>
                         <div>
-                            opure<a>acquista ora </a>
+                            <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
                         </div>
                         <ul>      
-                            <li><a>Punti Salienti del piano</a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Nessun limite di spazio per i file</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Cartelle offline su dispositivi<br>mobili</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Risparmio del 50% rispetto alle<br>iscrizioni singole</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Possibilità di inserire nuovi<br>membri del team</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Gestione dei permessi in base ai <br>ruoli</p></a></li>
+                            <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Nessun limite di spazio per i file</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Risparmio del 50% rispetto alle<br>iscrizioni singole</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Possibilità di inserire nuovi<br>membri del team</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Gestione dei permessi in base ai <br>ruoli</p></a></li>
                         </ul>
 
                     </div>
@@ -120,25 +120,25 @@
                 <div class="col">
                     <div class="card-small">
                         <div class="card-typology">
-                            <span><i class="fa-solid fa-building"></i><span class="space">Azienda</span>
+                            <span><i class="fa-solid fa-building"></i></span><span class="pl-5">Azienda</span>
                         </div>
                         <ul>
-                            <li><a href="#">Enterprise  </a></li>
-                            <li><a href="#">contattaci</a></li>
-                            <li><a href="#">-</a></li>
-                            <li><a href="#"><i class="fa-solid fa-user"></i>10 o più utenti</a></li>
-                            <li><a href="#"><i class="fa-solid fa-folder"></i><p>Soluzioni personalizzabili per la<br> tua azienda</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p>Assistenza personalizzata per <br>aiutare gli amministratori in una<br>gestione su larga scala</p> </a></li>
+                            <li><a href="#"><h3><b>Enterprise</b></h3></a></li>
+                            <li><a href="#"><p class="ml-20"><b>contattaci</b></p></a></li>
+                            <li><a href="#"><p class="ml-20">-</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">10 o più utenti</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">Soluzioni personalizzabili per la<br> tua azienda</p></a></li>
+                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Assistenza personalizzata per <br>aiutare gli amministratori in una<br>gestione su larga scala</p> </a></li>
                         </ul>
-                        <button class="bottone">Prova gratis per 30 giorni</button>
+                        <a class="btn">Prova gratis per 30 giorni</a>
                         <div>
-                            opure<a>acquista ora </a>
+                            <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
                         </div>
                         <ul>
-                            <li><a>Punti Salienti del piano</a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Cartelle ofline su dispositivi<br> mobili</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Servizio assistenza 24/h</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p>Possibilità di personalizzazione<br>totale</p></a></li>
+                            <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle ofline su dispositivi<br> mobili</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Servizio assistenza 24/h</p></a></li>
+                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Possibilità di personalizzazione<br>totale</p></a></li>
                         </ul>
 
                     </div>
@@ -146,7 +146,7 @@
                 <div class="col-large">
                     <div class="card-large">
                         <div class="card-typology">
-                            <span><i class="fa-solid fa-building"></i><span class="space">Team</span>
+                            <span><i class="fa-solid fa-building"></i></span><span class="pl-5">Team</span>
                         </div>
 
                     </div>
@@ -160,61 +160,61 @@
                 </div>
                 <div class="box-small">
                     <h3 class=" mt-40 p-30"><b>Entra in contatto con partner Dropbox</b></h3>
-                    <p class=" p-30">Trova un partner Dropbox e HelloSing<br>di fiducia.Ottieni le soluzioni e i servizi<br>necessariper raggiungere i tuoi obiettivi<br>aziendali, tra cui implementazione,<br>integrazione, gestione e supporto<br>continui.</p>
-                    <a class="btn " href="#">Trova il tuo partner</a>
+                    <p class="ml-20">Trova un partner Dropbox e HelloSing<br>di fiducia.Ottieni le soluzioni e i servizi<br>necessariper raggiungere i tuoi obiettivi<br>aziendali, tra cui implementazione,<br>integrazione, gestione e supporto<br>continui.</p>
+                    <p class="ml-20"><a class="btn " href="#">Trova il tuo partner</a></p>
                 </div>
             </div> 
         </section>
         <section class="operations countainer-small">
             <h2>Esegui più operazioni con Dropbox Buisness</h2>
             <div class="row">
-                <div class="col">
+                <div class="col-operations">
                     <div class="card-small">
                         <img src="img/business-feature-switching-tools.png" alt="buisness feature switching">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p>Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
+                        <p class="ml-20">Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-operations">
                     <div class="card-small">
                         <img src="img/business-feature-send-files-it.png" alt="send files">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p>Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
+                        <p class="ml-20">Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-operations">
                     <div class="card-small">
                         <img src="img/business-feature-coordinate-it.png" alt="business feature coordinate">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p>Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
+                        <p class="ml-20">Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-operations">
                     <div class="card-small">
                         <img src="img/business-feature-integrations-it.png" alt="business feature integrations">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p>Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
+                        <p class="ml-20">Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-operations">
                     <div class="card-small">
                        <img src="img/business-feature-multi-device.png" alt="business feature multi-device">
                        <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p>Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p> 
+                        <p class="ml-20">Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p> 
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-operations">
                     <div class="card-small">
                         <img src="img/business-feature-security.png" alt="business feature security">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p>Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
+                        <p class="ml-20">Porta a termine le atività quotidiane<br>con un solo strumento. Crea, modifica e<br>condividi contenuti cloud da<br>Documenti, Fogli e Presentazioni di<br>Google, file Microsoft Office e Dropbox<br>Paper direttamente da Dropbox</p>
                     </div>
                 </div>
             </div>
         </section>
         <section class="more countainer-small">
             <h2>Più di 500.000 team utilizzano Dropbox buisness</h2>
-            <a href="#">scopri di più sui nostri clienti</a>
+            <a class="a-blue" href="#">scopri di più sui nostri clienti</a>
         </section>
         <section class="logo-company">
             <div class="logo-company-box">
@@ -236,7 +236,7 @@
                 <div class="company-description">
                     <img src="img/designit.svg" alt="designit logo">
                     <p>"I membri del nostro team lovorano costantemente in Paesi, fusi orari e<br>uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze,<br>ma nessuna è facile come Dropbox o Dropbox Paper. Ora molte<br>soluzioni sono compatibili con queste esigenze,ma nessuna è facile<br>quanto Dropbox Paper".</p>
-                    <author>Morten Thomsen, Global IT Lead</author>
+                    <p>Morten Thomsen, Global IT Lead</p>
                 </div>
                 <div class="logo">
                     <div class="logo-img">
