--- a/index.html
+++ b/index.html
@@ -219,37 +219,37 @@
         <section class="logo-company">
             <div class="logo-company-box">
                 <div class="logo">
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/designit.svg" alt="designt logo">
+                    <div class="logo-img bg-green">
+                        <img class="logo-position" src="img/designit.svg" alt="designt logo">
                     </div>
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/arizona_state_university.svg" alt="arizona state university logo">
+                    <div class="logo-img bg-firebricks">
+                        <img class="logo-position" src="img/arizona_state_university.svg" alt="arizona state university logo">
                     </div>
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/university_of_florida.svg" alt="university of florida logo">
+                    <div class="logo-img bg-dogerblue">
+                        <img class="logo-position" src="img/university_of_florida.svg" alt="university of florida logo">
                     </div>
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/topps.svg" alt="topps logo">
+                    <div class="logo-img bg-red">
+                        <img class="logo-position" src="img/topps.svg" alt="topps logo">
                     </div>
 
                 </div>
                 <div class="company-description">
-                    <img src="img/designit.svg" alt="designit logo">
+                    <img class="logo-size" src="img/designit.svg" alt="designit logo">
                     <p>"I membri del nostro team lovorano costantemente in Paesi, fusi orari e<br>uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze,<br>ma nessuna è facile come Dropbox o Dropbox Paper. Ora molte<br>soluzioni sono compatibili con queste esigenze,ma nessuna è facile<br>quanto Dropbox Paper".</p>
                     <p>Morten Thomsen, Global IT Lead</p>
                 </div>
                 <div class="logo">
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/world_bicycle_relief.svg" alt="world bicycle relief logo">
+                    <div class="logo-img bg-crismon">
+                        <img class="logo-position" src="img/world_bicycle_relief.svg" alt="world bicycle relief logo">
                     </div>
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/hearst_corp.svg" alt="hearts logo">
+                    <div class="logo-img bg-gray">
+                        <img class="logo-position" src="img/hearst_corp.svg" alt="hearts logo">
                     </div>
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/lonely_planet.svg" alt="lonely planet logo">
+                    <div class="logo-img bg-blue">
+                        <img class="logo-position" src="img/lonely_planet.svg" alt="lonely planet logo">
                     </div>
-                    <div class="logo-img">
-                        <img class="logo-size" src="img/clear_channel.svg" alt="clear channel logo">
+                    <div class="logo-img bg-yellow">
+                        <img class="logo-position" src="img/clear_channel.svg" alt="clear channel logo">
                     </div>
 
                 </div>
