--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="card-typology">
                             <span><i class="fa-solid fa-user"></i></span><span class="pl-5">Singolo</span>
                         </div>
-                        <ul>
+                        <ul class="fa-ul">
                             <li><a href="#"><h3>Profesional</h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>&euro;12</b></p></a></li>
                             <li><a href="#"><p class="ml-20">/mese</p></a></li>
@@ -81,7 +81,7 @@
                         <div>
                             <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
                         </div>
-                        <ul>
+                        <ul class="fa-ul">
                             <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
                             <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
                             <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
@@ -94,11 +94,11 @@
                         <div class="card-typology">
                             <span><i class="fa-solid fa-users"></i></span><span class="pl-5">Team</span>
                         </div>
-                        <ul>
+                        <ul class="fa-ul">
                             <li><a href="#"><h3><b>Advance</b></h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>&euro;18</b></p></a></li>
                             <li><a href="#"><p class="ml-20">/utente/mese</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">3 o più utenti</p></a></li>
+                            <li><span><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">3 o più utenti</p></a></li>
                             <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">Tutto lo spazio di cui ha bisogno il tuo<br>team</p></a></li>
                             <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Sofisticate funzioni di controllo e<br>per tenere al sicuro tutti i file del<br>tuo team</p> </a></li>
                         </ul>
@@ -106,7 +106,7 @@
                         <div>
                             <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
                         </div>
-                        <ul>      
+                        <ul class="fa-ul">      
                             <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
                             <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Nessun limite di spazio per i file</p></a></li>
                             <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
@@ -122,7 +122,7 @@
                         <div class="card-typology">
                             <span><i class="fa-solid fa-building"></i></span><span class="pl-5">Azienda</span>
                         </div>
-                        <ul>
+                        <ul class="fa-ul">
                             <li><a href="#"><h3><b>Enterprise</b></h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>contattaci</b></p></a></li>
                             <li><a href="#"><p class="ml-20">-</p></a></li>
@@ -134,7 +134,7 @@
                         <div>
                             <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
                         </div>
-                        <ul>
+                        <ul class="fa-ul">
                             <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
                             <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle ofline su dispositivi<br> mobili</p></a></li>
                             <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Servizio assistenza 24/h</p></a></li>
@@ -286,7 +286,7 @@
                 <div class="info-list">
                     <div class="box-list">
                         <h3>Dropbox</h3>
-                        <ul class="lista-bianca">
+                        <ul class="lista-bianca ">
                             <li><a class="a-bianca" href="#">Applicazione dekstop</a></li>
                             <li><a class="a-bianca" href="#"><p>Perchè Dropbox</p></a></li>
                             <li><a class="a-bianca" href="#"><p>Piani</p></a></li>
