fill large-card

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <li><a href="#"><h3>Profesional</h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>&euro;12</b></p></a></li>
                             <li><a href="#"><p class="ml-20">/mese</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">1 utente</p></a></li>
+                            <li class="fa-li"><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">1 utente</p></a></li>
                             <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">5 TB di spazio di archiviazione<br> sicuro</p></a></li>
                             <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Funzioni di produttività premium<br>e condivisione file semplice e<br>sicura</p> </a></li>
                         </ul>
@@ -94,7 +94,7 @@
                         <div class="card-typology">
                             <span><i class="fa-solid fa-users"></i></span><span class="pl-5">Team</span>
                         </div>
-                        <ul class="fa-ul">
+                        <ul>
                             <li><a href="#"><h3><b>Advance</b></h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>&euro;18</b></p></a></li>
                             <li><a href="#"><p class="ml-20">/utente/mese</p></a></li>
@@ -148,7 +148,9 @@
                         <div class="card-typology">
                             <span><i class="fa-solid fa-building"></i></span><span class="pl-5">Team</span>
                         </div>
-
+                        <h3>Enterprise</h3>
+                        <p><b>Contatta l'ufficio vendite per i prezzi</b></p>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i profesionisti IT nella gestione su<br>qualsiasi scala. </p>
                     </div>
                 </div>
             </div>
@@ -285,8 +287,8 @@
             <div class="info">
                 <div class="info-list">
                     <div class="box-list">
-                        <h3>Dropbox</h3>
                         <ul class="lista-bianca ">
+                            <li><a class="a-bianca" href="#"><h3>Dropbox</h3></a></li>
                             <li><a class="a-bianca" href="#">Applicazione dekstop</a></li>
                             <li><a class="a-bianca" href="#"><p>Perchè Dropbox</p></a></li>
                             <li><a class="a-bianca" href="#"><p>Piani</p></a></li>
