--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                         </div>
                         <h3>Enterprise</h3>
                         <p><b>Contatta l'ufficio vendite per i prezzi</b></p>
-                        <p>Soluzioni personalizzate e supporto su misura per aiutare i profesionisti IT nella gestione su<br>qualsiasi scala. </p>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i profesionisti IT nella gestione su<br>qualsiasi scala.</p>
+                        <a class="btn" href="#">Contatta l'ufficio vendite</a>
                     </div>
                 </div>
             </div>
@@ -163,7 +164,7 @@
                 <div class="box-small">
                     <h3 class=" mt-40 p-30"><b>Entra in contatto con partner Dropbox</b></h3>
                     <p class="ml-20">Trova un partner Dropbox e HelloSing<br>di fiducia.Ottieni le soluzioni e i servizi<br>necessariper raggiungere i tuoi obiettivi<br>aziendali, tra cui implementazione,<br>integrazione, gestione e supporto<br>continui.</p>
-                    <p class="ml-20"><a class="btn " href="#">Trova il tuo partner</a></p>
+                    <p class="ml-20"><a class="btn-white" href="#">Trova il tuo partner</a></p>
                 </div>
             </div> 
         </section>
@@ -264,14 +265,14 @@
                         <h2 class="trial-color"><b>Prova Dropbox business nella tua azienda.</b></h2>
                     </div>
                     <div class="box-medium">
-                        <a class="btn" href="#">Inizia la tua prova gratuita</a>
+                        <a class="btn-white" href="#">Inizia la tua prova gratuita</a>
                     </div>
                 </div>
             </div>
         </section>
         <section class="faq countainer-small">
             <h2>Domande frequenti</h2>
-            <div class="questions">
+            <div class="questions linea-sopra">
                 <p><b>Qual è la differenza tra Dropbox Buisness Standard e Dropbox buisness Advanced ?</b></p>
             </div>
             <div class="questions">
@@ -295,10 +296,12 @@
                             <li><a class="a-bianca" href="#"><p>Sicurezza</p></a></li>
                             <li><a class="a-bianca" href="#"><p>funzioni</p></a></li>
                         </ul>
+                        <div class="linea"></div>
+                        <span class="footer-lenguage"><i class="fa-solid fa-earth-americas" style="color: #858b90;"></i>Italiano<i class="fa-solid fa-caret-up" style="color: #858b90;"></i></span>
                     </div>
                     <div class="box-list">
-                        <h3>Prodotti</h3>
                         <ul class="lista-bianca">
+                            <li><a class="a-bianca" href="#"><h3>Prodotti</h3></a></li>
                             <li><a class="a-bianca" href="#">Applicazione dekstop</a></li>
                             <li><a class="a-bianca" href="#"><p>Perchè Dropbox</p></a></li>
                             <li><a class="a-bianca" href="#"><p>Piani</p></a></li>
@@ -307,8 +310,8 @@
                         </ul>
                     </div>
                     <div class="box-list">
-                        <h3>Azienda</h3>
                         <ul class="lista-bianca">
+                            <li><a class="a-bianca" href="#"><h3>Azienda</h3></a></li>
                             <li><a class="a-bianca" href="#">Applicazione dekstop</a></li>
                             <li><a class="a-bianca" href="#"><p>Perchè Dropbox</p></a></li>
                             <li><a class="a-bianca" href="#"><p>Piani</p></a></li>
@@ -317,8 +320,8 @@
                         </ul>
                     </div>
                     <div class="box-list">
-                        <h3>Supporto</h3>
                         <ul class="lista-bianca">
+                            <li><a class="a-bianca" href="#"><h3>Supporto</h3></a></li>
                             <li><a class="a-bianca" href="#">Applicazione dekstop</a></li>
                             <li><a class="a-bianca" href="#"><p>Perchè Dropbox</p></a></li>
                             <li><a class="a-bianca" href="#"><p>Piani</p></a></li>
@@ -327,8 +330,8 @@
                         </ul>
                     </div>
                     <div class="box-list">
-                        <h3>community</h3>
                         <ul class="lista-bianca">
+                            <li><a class="a-bianca" href="#"><h3>community</h3></a></li>
                             <li><a class="a-bianca" href="#">Applicazione dekstop</a></li>
                             <li><a class="a-bianca" href="#"><p>Perchè Dropbox</p></a></li>
                             <li><a class="a-bianca" href="#"><p>Piani</p></a></li>
