align icon on plan section

--- a/index.html
+++ b/index.html
@@ -73,18 +73,15 @@
                             <li><a href="#"><h3>Profesional</h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>&euro;12</b></p></a></li>
                             <li><a href="#"><p class="ml-20">/mese</p></a></li>
-                            <li class="fa-li"><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">1 utente</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">5 TB di spazio di archiviazione<br> sicuro</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Funzioni di produttività premium<br>e condivisione file semplice e<br>sicura</p> </a></li>
-                        </ul>
-                        <a class="btn">Prova gratis per 30 giorni</a>
-                        <div>
-                            <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
-                        </div>
-                        <ul class="fa-ul">
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-user"></i></span><p class="ml-20">1 utente</p></a></li>
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-folder"></i></span><p class="ml-20">5 TB di spazio di archiviazione<br> sicuro</p></a></li>
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span><p class="ml-20">Funzioni di produttività premium<br>e condivisione file semplice e<br>sicura</p> </a></li>
+                            <li><a class="btn">Prova gratis per 30 giorni</a></li>
+                            <li><p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p></li>
+                            <li><div class="linea"></div></li>
                             <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Invia file fino a 100 GB con<br> Dropox Transfert</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
                         </ul>
 
                     </div>
@@ -94,25 +91,22 @@
                         <div class="card-typology">
                             <span><i class="fa-solid fa-users"></i></span><span class="pl-5">Team</span>
                         </div>
-                        <ul>
+                        <ul class="fa-ul">
                             <li><a href="#"><h3><b>Advance</b></h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>&euro;18</b></p></a></li>
                             <li><a href="#"><p class="ml-20">/utente/mese</p></a></li>
-                            <li><span><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">3 o più utenti</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">Tutto lo spazio di cui ha bisogno il tuo<br>team</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Sofisticate funzioni di controllo e<br>per tenere al sicuro tutti i file del<br>tuo team</p> </a></li>
-                        </ul>
-                        <a class="btn">Prova gratis per 30 giorni</a>
-                        <div>
-                            <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
-                        </div>
-                        <ul class="fa-ul">      
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-user"></i></span><p class="ml-20">3 o più utenti</p></a></li>
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-folder"></i></span><p class="ml-20">Tutto lo spazio di cui ha bisogno il tuo<br>team</p></a></li>
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span><p class="ml-20">Sofisticate funzioni di controllo e<br>per tenere al sicuro tutti i file del<br>tuo team</p> </a></li>  
+                            <li><a class="btn">Prova gratis per 30 giorni</a></li> 
+                            <li> <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p></li>
+                            <li><div class="linea"></div></li>   
                             <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Nessun limite di spazio per i file</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Risparmio del 50% rispetto alle<br>iscrizioni singole</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Possibilità di inserire nuovi<br>membri del team</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Gestione dei permessi in base ai <br>ruoli</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Nessun limite di spazio per i file</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Cartelle offline su dispositivi<br>mobili</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Risparmio del 50% rispetto alle<br>iscrizioni singole</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Possibilità di inserire nuovi<br>membri del team</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Gestione dei permessi in base ai <br>ruoli</p></a></li>
                         </ul>
 
                     </div>
@@ -126,19 +120,16 @@
                             <li><a href="#"><h3><b>Enterprise</b></h3></a></li>
                             <li><a href="#"><p class="ml-20"><b>contattaci</b></p></a></li>
                             <li><a href="#"><p class="ml-20">-</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-user"></i><p class="ml-20">10 o più utenti</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-folder"></i><p class="ml-20">Soluzioni personalizzabili per la<br> tua azienda</p></a></li>
-                            <li><a href="#"><i class="fa-solid fa-share-nodes"></i><p class="ml-20">Assistenza personalizzata per <br>aiutare gli amministratori in una<br>gestione su larga scala</p> </a></li>
-                        </ul>
-                        <a class="btn">Prova gratis per 30 giorni</a>
-                        <div>
-                            <p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p>
-                        </div>
-                        <ul class="fa-ul">
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-user"></i></span><p class="ml-20">10 o più utenti</p></a></li>
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-folder"></i></span><p class="ml-20">Soluzioni personalizzabili per la<br> tua azienda</p></a></li>
+                            <li><a href="#"><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span><p class="ml-20">Assistenza personalizzata per <br>aiutare gli amministratori in una<br>gestione su larga scala</p> </a></li>
+                            <li><a class="btn">Prova gratis per 30 giorni</a></li>
+                            <li><p class="ml-20">opure <a class="a-blue" href="#">acquista ora </a></p></li>
+                            <li><div class="linea"></div></li>
                             <li><a><p class="ml-20">Punti Salienti del piano</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Cartelle ofline su dispositivi<br> mobili</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Servizio assistenza 24/h</p></a></li>
-                            <li><a><i class="fa-solid fa-check" style="color: #0061ff;"></i><p class="ml-20">Possibilità di personalizzazione<br>totale</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Cartelle ofline su dispositivi<br> mobili</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Servizio assistenza 24/h</p></a></li>
+                            <li><a><span class="fa-li"><i class="fa-solid fa-check" style="color: #0061ff;"></i></span><p class="ml-20">Possibilità di personalizzazione<br>totale</p></a></li>
                         </ul>
 
                     </div>
@@ -148,10 +139,18 @@
                         <div class="card-typology">
                             <span><i class="fa-solid fa-building"></i></span><span class="pl-5">Team</span>
                         </div>
-                        <h3>Enterprise</h3>
-                        <p><b>Contatta l'ufficio vendite per i prezzi</b></p>
-                        <p>Soluzioni personalizzate e supporto su misura per aiutare i profesionisti IT nella gestione su<br>qualsiasi scala.</p>
-                        <a class="btn" href="#">Contatta l'ufficio vendite</a>
+                        <div class="split-card">
+                            <div class="big-split">
+                                <ul class="fa-ul">
+                                    <li><h3>Enterprise</h3></li>
+                                    <li><p><b>Contatta l'ufficio vendite per i prezzi</b></p></li>
+                                    <li><p>Soluzioni personalizzate e supporto su misura per aiutare i profesionisti IT nella gestione su<br>qualsiasi scala.</p></li>
+                                </ul>
+                            </div>
+                            <div class="small-split">
+                                <a class="btn" href="#">Contatta l'ufficio vendite</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
