--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">    
+        <!-- Creo la navbar -->
+        <nav class="navbar"> 
+            <!-- Paret sinistra-->   
            <div class="nav-left">
                 <ul class="lista">
                     <li><a href="#"><img src="img/logo-small.png" alt="logo dropbox"></a></li>
                     <li><a href="#">Perchè Dropbox</a></li>
                     <li><a href="#">Funzioni</a></li>
                     <li><a href="#">Piani e Prezzi</a></li>
-                 
                 </ul>
            </div>
+           <!-- Parte destra-->
            <div class="nav-right">
             <ul class="lista">
                 <li><a href="#">Supporto</a></li>
@@ -34,6 +36,7 @@
             </ul>
            </div>
         </nav>
+        <!-- Creo il jumbotron diviso in due box racchiussi in un contenitore-->
         <div class="jumbotron">
             <div class="countainer-large">
                 <h1 class="mb-20">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -52,8 +55,10 @@
         </div>
     </header>
     <main>
+        <!-- Creo la sezione piano buisness all'interno del countainer-->
         <section class="plan countainer-small">
             <h2>Trova il piano business che fa per te</h2>
+            <!-- creo le due spunte-->
             <div class="cont-spunta">
                 <div class="spunta">
                     <div class="cerchietto-spuntato"></div><span>Fatturazione mensile</span>
@@ -62,7 +67,7 @@
                     <div class="cerchietto"></div><span>Fatturazione mensile</span>
                 </div>
             </div>
-           
+           <!-- creo le tre card piccole -->
             <div class="row">
                 <div class="col">
                     <div class="card-small">
@@ -134,6 +139,7 @@
 
                     </div>
                 </div>
+                <!-- Creo la card grande -->
                 <div class="col-large">
                     <div class="card-large">
                         <div class="card-typology">
@@ -155,6 +161,7 @@
                 </div>
             </div>
         </section>
+        <!-- Creo la sezione partner all'intterno del countainer quindi due box uno piu grande con l'immagine e uno piu piccolo con il testo -->
         <section class="partner countainer-small">
             <div class="box">   
                 <div class="box-large">
@@ -167,6 +174,7 @@
                 </div>
             </div> 
         </section>
+        <!-- Creo la sezione operazioni qiundi 6 card 3 per ogni riga racchiuse all'interno del countainer-->
         <section class="operations countainer-small">
             <h2>Esegui più operazioni con Dropbox Buisness</h2>
             <div class="row">
@@ -214,10 +222,12 @@
                 </div>
             </div>
         </section>
+        <!-- Creo la sezione more racchiusa all'interno del countainer-->
         <section class="more countainer-small">
             <h2>Più di 500.000 team utilizzano Dropbox buisness</h2>
             <a class="a-blue" href="#">scopri di più sui nostri clienti</a>
         </section>
+        <!-- Creo la sezione logo company quindi 3 box quelli ai lati a loro volta divisi in 4 box-->
         <section class="logo-company">
             <div class="logo-company-box">
                 <div class="logo">
@@ -257,6 +267,7 @@
                 </div>
             </div>
         </section>
+        <!-- Creo la sezione trial composta da due box uno piu piccolo ed uno piu grande racchiusi all'ineterno di un contenitore-->
         <section class="trial">
             <div class="countainer-small">
                 <div class="box-trial">
@@ -269,19 +280,21 @@
                 </div>
             </div>
         </section>
+        <!-- Creo la sezione faq-->
         <section class="faq countainer-small">
             <h2>Domande frequenti</h2>
             <div class="questions linea-sopra">
-                <p><b>Qual è la differenza tra Dropbox Buisness Standard e Dropbox buisness Advanced ?</b></p>
+                <p><b>Qual è la differenza tra Dropbox Buisness Standard e Dropbox buisness Advanced ?</b><span><i class="fa-solid fa-angle-down"></i></span></p>
             </div>
             <div class="questions">
-                <p><b>Qual è la differenza tra Dropbox Buisness Standard e Dropbox buisness Advanced ?</b></p>
+                <p><b>Qual è la differenza tra Dropbox Buisness Standard e Dropbox buisness Advanced ?</b><span><i class="fa-solid fa-angle-down"></i></span></p>
             </div>
             <div class="questions">
-                <p><b>Qual è la differenza tra Dropbox Buisness Standard e Dropbox buisness Advanced ?</b></p>
+                <p><b>Qual è la differenza tra Dropbox Buisness Standard e Dropbox buisness Advanced ?</b><span><i class="fa-solid fa-angle-down"></i></span></p>
             </div>
         </section>
     </main>
+    <!-- Creo il footer -->
     <footer class="bg-black">
         <div class="countainer-large">
             <div class="info">
